--- a/test/ts-example/index.scss
+++ b/test/ts-example/index.scss
@@ -1,4 +1,16 @@
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+:global {
+  #root {
+    width: 100%;
+    height: 100%;
+  }
+}
 .wrapper {
+  position: fixed;
   width: 100%;
   height: 100%;
   background: url('~example/assets/test-jpg.jpg');
