--- a/test/ts-example/index.scss
+++ b/test/ts-example/index.scss
@@ -14,6 +14,9 @@ html, body {
   width: 100%;
   height: 100%;
   background: url('~example/assets/test-jpg.jpg');
+  i {
+    display: block;
+  }
   .color {
     color: red;
     font-size: 18px;
@@ -21,6 +24,11 @@ html, body {
   .icon {
     width: 30px;
     height: 30px;
-    background: url('~example/assets//test-png.png');
+    background: url('~example/assets/test-png.png');
+  }
+  .icon-svg {
+    width: 30px;
+    height: 30px;
+    background: url('~example/assets/test-svg.svg');
   }
 }
