--- a/test/ts-example/index.scss
+++ b/test/ts-example/index.scss
@@ -1,3 +1,4 @@
+@import './base.scss';
 html, body {
   width: 100%;
   height: 100%;
@@ -22,6 +23,7 @@ html, body {
     font-size: 18px;
   }
   .icon {
+    @extend .base;
     width: 30px;
     height: 30px;
     background: url('~example/assets/test-png.png');
