--- a/test/ts-example/index.scss
+++ b/test/ts-example/index.scss
@@ -14,7 +14,7 @@ html, body {
   position: fixed;
   width: 100%;
   height: 100%;
-  background: url('~example/assets/test-jpg.jpg');
+  background: url('./assets/test-jpg.jpg');
   i {
     display: block;
   }
@@ -26,11 +26,11 @@ html, body {
     @extend .base;
     width: 30px;
     height: 30px;
-    background: url('~example/assets/test-png.png');
+    background: url('./assets/test-png.png');
   }
   .icon-svg {
     width: 30px;
     height: 30px;
-    background: url('~example/assets/test-svg.svg');
+    background: url('./assets/test-svg.svg');
   }
 }
